# packages/server/res/openapi.yaml
@@ -18,78 +18,6 @@ tags:
   - name: Transactions
     description: Creating transactions
 paths:
-  /create-tx:
-    post:
-      tags:
-        - Transactions
-      summary: Create a transaction
-      description: Creates a transaction and returns information based on the request
-      operationId: createTx
-      parameters:
-        - name: asset
-          in: query
-          required: true
-          description: The asset to use for the signature
-          schema:
-            type: string
-        - name: account
-          in: query
-          required: true
-          description: The account to use to create the transaction
-          schema:
-            type: number
-        - name: change
-          in: query
-          required: false
-          description: The change to use for the derivation
-          schema:
-            type: number
-            default: 0
-        - name: index
-          in: query
-          required: false
-          description: The index to use for the derivation
-          schema:
-            type: number
-            default: 0
-        - name: testnet
-          in: query
-          required: false
-          description: Is this testnet or not
-          schema:
-            type: boolean
-            default: false
-        - name: qr
-          in: query
-          required: false
-          description: Should the returned response be a QR image (base64 encoded)
-          schema:
-            type: boolean
-            default: false
-      requestBody:
-        description: Transaction request JSON
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/TransactionRequest"
-        required: true
-      responses:
-        "200":
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: object
-                additionalProperties:
-                  oneOf:
-                    - $ref: "#/components/schemas/QRResponse"
-                    - $ref: "#/components/schemas/TransactionResponse"
-        "500":
-          description: Operation failed
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
   /recover-keys:
     post:
       tags:
